// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQLController.ts should filter errors from controller on abritrary types 1`] = `
Object {
  "body": "{\\"data\\":{\\"foos\\":[null]},\\"errors\\":[{\\"message\\":\\"bar\\",\\"locations\\":[{\\"line\\":1,\\"column\\":10}],\\"path\\":[\\"foos\\",0,\\"id\\"],\\"extensions\\":{\\"code\\":\\"INTERNAL_SERVER_ERROR\\"}}]}
",
  "headers": Object {
    "Access-Control-Allow-Origin": "*",
    "Content-Length": "160",
    "Content-Type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`GraphQLController.ts should filter errors from controller on root types 1`] = `
Object {
  "body": "{\\"data\\":{\\"foos\\":null},\\"errors\\":[{\\"message\\":\\"bar\\",\\"locations\\":[{\\"line\\":1,\\"column\\":3}],\\"path\\":[\\"foos\\"],\\"extensions\\":{\\"code\\":\\"BAR\\"}}]}
",
  "headers": Object {
    "Access-Control-Allow-Origin": "*",
    "Content-Length": "132",
    "Content-Type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`GraphQLController.ts should filter errors from method 1`] = `
Object {
  "body": "{\\"data\\":{\\"foos\\":[{\\"id\\":\\"2\\",\\"name\\":null}]},\\"errors\\":[{\\"message\\":\\"bar\\",\\"locations\\":[{\\"line\\":1,\\"column\\":13}],\\"path\\":[\\"foos\\",0,\\"name\\"],\\"extensions\\":{\\"code\\":\\"INTERNAL_SERVER_ERROR\\"}}]}
",
  "headers": Object {
    "Access-Control-Allow-Origin": "*",
    "Content-Length": "180",
    "Content-Type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`GraphQLController.ts should handle basic usage patterns  1`] = `
Object {
  "body": "{\\"data\\":{\\"foos\\":[{\\"id\\":\\"2\\",\\"name\\":\\"Hello foo\\"}]}}
",
  "headers": Object {
    "Access-Control-Allow-Origin": "*",
    "Content-Length": "50",
    "Content-Type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`GraphQLController.ts should map arbritary errors to graphql errors 1`] = `
Object {
  "body": "{\\"data\\":{\\"foos\\":null},\\"errors\\":[{\\"message\\":\\"Internal Server Error\\",\\"locations\\":[{\\"line\\":1,\\"column\\":3}],\\"path\\":[\\"foos\\"],\\"extensions\\":{\\"code\\":\\"INTERNAL_SERVER_ERROR\\"}}]}
",
  "headers": Object {
    "Access-Control-Allow-Origin": "*",
    "Content-Length": "168",
    "Content-Type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`GraphQLController.ts should pass custom graphql errors to the client  1`] = `
Object {
  "body": "{\\"data\\":{\\"foos\\":null},\\"errors\\":[{\\"message\\":\\"foo\\",\\"locations\\":[{\\"line\\":1,\\"column\\":3}],\\"path\\":[\\"foos\\"],\\"extensions\\":{\\"code\\":\\"FOO\\"}}]}
",
  "headers": Object {
    "Access-Control-Allow-Origin": "*",
    "Content-Length": "132",
    "Content-Type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`GraphQLController.ts should return forbidden (null value) for specific field  1`] = `
Object {
  "body": "{\\"data\\":{\\"foos\\":[{\\"id\\":\\"2\\",\\"name\\":null}]},\\"errors\\":[{\\"message\\":\\"Forbidden\\",\\"locations\\":[{\\"line\\":1,\\"column\\":13}],\\"path\\":[\\"foos\\",0,\\"name\\"],\\"extensions\\":{\\"code\\":\\"FORBIDDEN\\"}}]}
",
  "headers": Object {
    "Access-Control-Allow-Origin": "*",
    "Content-Length": "174",
    "Content-Type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`GraphQLController.ts should return forbidden error for entire API 1`] = `
Object {
  "body": "{\\"data\\":{\\"foos\\":null},\\"errors\\":[{\\"message\\":\\"Forbidden\\",\\"locations\\":[{\\"line\\":1,\\"column\\":3}],\\"path\\":[\\"foos\\"],\\"extensions\\":{\\"code\\":\\"FORBIDDEN\\"}}]}
",
  "headers": Object {
    "Access-Control-Allow-Origin": "*",
    "Content-Length": "144",
    "Content-Type": "application/json",
  },
  "statusCode": 200,
}
`;
